--- a/build.settings
+++ b/build.settings
@@ -2,5 +2,14 @@ settings = {
 	orientation = {
 		default = 'portrait',
 		supported = { 'portrait' }
-	}
+	},
+	iphone = {
+        plist = {
+            UIAppFonts = {
+                'Roboto-Thin.ttf'
+            },
+            UIApplicationExitsOnSuspend = true
+        },
+    }
 }
+
